--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -21,37 +21,37 @@ variables:
   environmentName: dev
   eapimProductName: 'NCS Identity'
   b2cAuthUrl: "https://{0}.b2clogin.com/{0}.onmicrosoft.com/{1}/oauth2/v2.0/authorize?client_id={2}&nonce={4}&redirect_uri={3}&scope=openid&response_type=id_token"
-  armVariables: [
-  "-applicationName $(applicationName)",
-  "-publisherEmail test@test.com",
-  "-publisherName deploymentTest",
-  "-servicePlanSkuName B1",
-  "-servicePlanSkuTier Basic",
-  "-servicePlanSkuCount 1",
-  "-secondaryStorageLocation $(deploymentSecondaryLocation)",
-  "-alertWebHookUrl http://www.test.com",
-  "-B2CTenant B2Cdemotenant",
-  "-B2CSignUpPolicy B2C_1A_signup_invitation",
-  "-B2CSignupConfirmPolicy B2C_1A_signup_confirmation",
-  "-B2CPasswordResetConfirmPolicy B2C_1A_passwordResetConformation",
-  "-B2CClientId $(b2cClientId)",
-  "-B2CRedirectUri https://jwt.ms",
-  "-B2CAuthorizationUrl $(b2cAuthUrl)",
-  "-ClientSigningKey $(clientSigningKey)",
-  "-SMTPServer $(smtpServer)",
-  "-SMTPUsername $(smtpUsername)",
-  "-SMTPPassword $(smtpPassword)",
-  "-SMTPFromAddress $(smtpFromAddress)",
-  "-SMTPSubject Signin to NCS",
-  "-SignupEmailSubject Create your account",
-  "-SignupConfirmationEmailSubject Verify your account",
-  "-PasswordResetConfirmationEmailSubject Verify your account",
-  "-AccountActivationEmailExpiryInSeconds 86400",
-  "-NCSApimSubscriptionKey $(ncsApimSubscriptionKey)",
-  "-NCSDSSApiKey $(ncsDssApiKey)",
-  "-NCSDSSSearchApiUrl $(ncsDssSearchApiUrl)",
-  "-NCSDSSSearchApiVersion $(ncsDssSearchApiVersion)"
-  ]
+  armVariables: 
+  - "-applicationName $(applicationName)"
+  - "-publisherEmail test@test.com"
+  - "-publisherName deploymentTest"
+  - "-servicePlanSkuName B1"
+  - "-servicePlanSkuTier Basic"
+  - "-servicePlanSkuCount 1"
+  - "-secondaryStorageLocation $(deploymentSecondaryLocation)"
+  - "-alertWebHookUrl http://www.test.com"
+  - "-B2CTenant B2Cdemotenant"
+  - "-B2CSignUpPolicy B2C_1A_signup_invitation"
+  - "-B2CSignupConfirmPolicy B2C_1A_signup_confirmation"
+  - "-B2CPasswordResetConfirmPolicy B2C_1A_passwordResetConformation"
+  - "-B2CClientId $(b2cClientId)"
+  - "-B2CRedirectUri https://jwt.ms"
+  - "-B2CAuthorizationUrl $(b2cAuthUrl)"
+  - "-ClientSigningKey $(clientSigningKey)"
+  - "-SMTPServer $(smtpServer)"
+  - "-SMTPUsername $(smtpUsername)"
+  - "-SMTPPassword $(smtpPassword)"
+  - "-SMTPFromAddress $(smtpFromAddress)"
+  - "-SMTPSubject Signin to NCS"
+  - "-SignupEmailSubject Create your account"
+  - "-SignupConfirmationEmailSubject Verify your account"
+  - "-PasswordResetConfirmationEmailSubject Verify your account"
+  - "-AccountActivationEmailExpiryInSeconds 86400"
+  - "-NCSApimSubscriptionKey $(ncsApimSubscriptionKey)"
+  - "-NCSDSSApiKey $(ncsDssApiKey)"
+  - "-NCSDSSSearchApiUrl $(ncsDssSearchApiUrl)"
+  - "-NCSDSSSearchApiVersion $(ncsDssSearchApiVersion)"
+
 
 
 stages:
