--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -38,46 +38,9 @@ stages:
       environmentId: 'd01'
       serviceConnection: $(devServiceConnection)
       subscriptionId: $(devSubscriptionId)
-      resourceGroupName: $(projectId)d01-$(applicationName)
-      location: $(deploymentPrimaryLocation)
-      templatePath: '$(Build.SourcesDirectory)/arm/template.json'
-      overrideParameters: '-applicationName "$(applicationName)"
-        -environmentName "dev"
-        -publisherEmail "test@test.com"
-        -publisherName "deploymentTest"
-        -apimSku "Developer"
-        -apimSkuCount "1"
-        -servicePlanSkuName "B1"
-        -servicePlanSkuTier "Basic"
-        -servicePlanSkuCount "1"
-        -secondaryStorageLocation "$(deploymentSecondaryLocation)"
-        -alertWebHookUrl "http://www.test.com"
-        -B2CTenant "B2Cdemotenant"
-        -B2CSignUpPolicy "B2C_1A_signup_invitation"
-        -B2CSignupConfirmPolicy "B2C_1A_signup_confirmation"
-        -B2CPasswordResetConfirmPolicy "B2C_1A_passwordResetConformation"
-        -B2CClientId "$(b2cClientId)"
-        -B2CRedirectUri "https://jwt.ms"
-        -B2CAuthorizationUrl "https://{0}.b2clogin.com/{0}.onmicrosoft.com/{1}/oauth2/v2.0/authorize?client_id={2}&nonce={4}&redirect_uri={3}&scope=openid&response_type=id_token"
-        -ClientSigningKey "$(clientSigningKey)"
-        -SMTPServer "$(smtpServer)"
-        -SMTPUsername "$(smtpUsername)"
-        -SMTPPassword "$(smtpPassword)"
-        -SMTPFromAddress "$(smtpFromAddress)"
-        -SMTPSubject "Sign-in to NCS"
-        -SignupEmailSubject "Create your account"
-        -SignupConfirmationEmailSubject "Verify your account"
-        -PasswordResetConfirmationEmailSubject "Verify your account"
-        -AccountActivationEmailExpiryInSeconds "86400"
-        -NCSApimSubscriptionKey "$(ncsApimSubscriptionKey)"
-        -NCSDSSApiKey "$(ncsDssApiKey)"
-        -NCSDSSSearchApiUrl "$(ncsDssSearchApiUrl)"
-        -NCSDSSSearchApiVersion "$(ncsDssSearchApiVersion)"
-        -NCSDSSCreateCustomerApiUrl "https://at.api.nationalcareersservice.org.uk/customers/api/Customers/"
-        -NCSDSSCreateContactApiUrl "https://at.api.nationalcareersservice.org.uk/contactdetails/api/customers/{0}/ContactDetails/"
-        -NCSDSSCreateIdentityApiUrl "https://at.api.nationalcareersservice.org.uk/digitalidentities/api/identity"
-        -TouchpointId "1000000000"'
-      deployApim: true
+      deploymentPrimaryLocation: $(deploymentPrimaryLocation)
+      deploymentSecondaryLocation: $(deploymentSecondaryLocation)
+      deployApim: false
 
 - stage: deployTest
   displayName: Deploy - TEST
