test: tenant setup

--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -19,75 +19,105 @@ trigger:
 variables:
   applicationName: ncsauth
 
+
 stages:
-- stage: build
-  displayName: Build
+
+# - stage: build
+#   displayName: Build
+#   jobs:
+#   - template: /Application/dotnet/jobs/build-application.yml@devopsTemplates
+#     parameters:
+#       applicationName: $(applicationName)
+#       webPublish: false
+
+
+# - stage: devtenantSetup
+#   displayName: Tenant Setup - DEV
+#   jobs:
+#   - template: yaml/jobs/tenant-setup.yml
+#     parameters:
+#       environmentName: dev
+#       tenantId: $(devAzureB2cTenantId)
+#       uploaderPrincipalClientId: ''
+#       uploaderPrincipalSecret: ''
+#       proxyAppRegistrationClientId: $(devProxyIdentityFrameworkClientId)
+#       proxyAppRegistrationObjectId: $(devProxyIdentityFrameworkObjectId)
+#       eapimRootUrl: dev-api-customerengagement.platform.education.gov.uk
+
+- stage: devtenantSetup
+  displayName: Tenant Setup - TEST
   jobs:
-  - template: /Application/dotnet/jobs/build-application.yml@devopsTemplates
+  - template: yaml/jobs/tenant-setup.yml
     parameters:
-      applicationName: $(applicationName)
-      webPublish: false
+      environmentName: test
+      tenantId: $(testAzureB2cTenantId)
+      uploaderPrincipalClientId: $(testAdoPrincipalClientId)
+      uploaderPrincipalSecret: $(testAdoPrincipalSecret)
+      proxyAppRegistrationClientId: $(testProxyIdentityFrameworkClientId)
+      proxyAppRegistrationObjectId: $(testProxyIdentityFrameworkObjectId)
+      eapimRootUrl: oat-api-customerengagement.platform.education.gov.uk
 
-- stage: deployDev
-  displayName: Deploy - DEV
-  dependsOn: build
-  jobs:
-  - template: yaml/jobs/deploy.yml
-    parameters:
-      environmentName: 'dev'
-      environmentId: 'd01'
-      serviceConnection: $(devServiceConnection)
-      subscriptionId: $(devSubscriptionId)
-      deploymentPrimaryLocation: $(deploymentPrimaryLocation)
-      deploymentSecondaryLocation: $(deploymentSecondaryLocation)
-      deployApim: true
-      eapimEnvironmentName: 'Development'
 
-- stage: postDeployDev
-  displayName: Post Deploy - DEV
-  dependsOn: deployDev
-  jobs:
-  - job: azCli
-    displayName: Add App Registrations
-    pool:
-      vmImage: ubuntu-latest
-    steps:
-    - template: yaml/steps/add-service-principals.yml
-      parameters:
-        serviceConnection: $(devServiceConnection)
-        environmentName: 'dev'
-        identityFrameworkSecret: $(devIdentPrincipalSecret)
-        proxyIdentityFrameworkSecret: $(devProxyIdentProxyPrincipalSecret)
-        graphAccessSecret: $(devGraphPrincipalSecret))
+# - stage: deployDev
+#   displayName: Deploy - DEV
+#   dependsOn: build
+#   jobs:
+#   - template: yaml/jobs/deploy.yml
+#     parameters:
+#       environmentName: 'dev'
+#       environmentId: 'd01'
+#       serviceConnection: $(devServiceConnection)
+#       subscriptionId: $(devSubscriptionId)
+#       deploymentPrimaryLocation: $(deploymentPrimaryLocation)
+#       deploymentSecondaryLocation: $(deploymentSecondaryLocation)
+#       deployApim: true
+#       eapimEnvironmentName: 'Development'
 
-- stage: deployTest
-  displayName: Deploy - TEST
-  dependsOn: build
-  jobs:
-  - template: yaml/jobs/deploy.yml
-    parameters:
-      environmentName: 'test'
-      environmentId: 't01'
-      serviceConnection: $(testServiceConnection)
-      subscriptionId: $(testSubscriptionId)
-      deploymentPrimaryLocation: $(deploymentPrimaryLocation)
-      deploymentSecondaryLocation: $(deploymentSecondaryLocation)
-      deployApim: true
-      eapimEnvironmentName: 'Test'
+# - stage: postDeployDev
+#   displayName: Post Deploy - DEV
+#   dependsOn: deployDev
+#   jobs:
+#   - job: azCli
+#     displayName: Add App Registrations
+#     pool:
+#       vmImage: ubuntu-latest
+#     steps:
+#     - template: yaml/steps/add-service-principals.yml
+#       parameters:
+#         serviceConnection: $(devServiceConnection)
+#         environmentName: 'dev'
+#         identityFrameworkSecret: $(devIdentPrincipalSecret)
+#         proxyIdentityFrameworkSecret: $(devProxyIdentProxyPrincipalSecret)
+#         graphAccessSecret: $(devGraphPrincipalSecret))
 
-- stage: postDeployTest
-  displayName: Post Deploy - TEST
-  dependsOn: deployTest
-  jobs:
-  - job: azCli
-    displayName: Add App Registrations
-    pool:
-      vmImage: ubuntu-latest
-    steps:
-    - template: yaml/steps/add-service-principals.yml
-      parameters:
-        serviceConnection: $(testServiceConnection)
-        environmentName: 'test'
-        identityFrameworkSecret: $(testIdentPrincipalSecret)
-        proxyIdentityFrameworkSecret: $(testIdentProxyPrincipalSecret)
-        graphAccessSecret: $(testGraphPrincipalSecret)
+# - stage: deployTest
+#   displayName: Deploy - TEST
+#   dependsOn: build
+#   jobs:
+#   - template: yaml/jobs/deploy.yml
+#     parameters:
+#       environmentName: 'test'
+#       environmentId: 't01'
+#       serviceConnection: $(testServiceConnection)
+#       subscriptionId: $(testSubscriptionId)
+#       deploymentPrimaryLocation: $(deploymentPrimaryLocation)
+#       deploymentSecondaryLocation: $(deploymentSecondaryLocation)
+#       deployApim: true
+#       eapimEnvironmentName: 'Test'
+
+# - stage: postDeployTest
+#   displayName: Post Deploy - TEST
+#   dependsOn: deployTest
+#   jobs:
+#   - job: azCli
+#     displayName: Add App Registrations
+#     pool:
+#       vmImage: ubuntu-latest
+#     steps:
+#     - template: yaml/steps/add-service-principals.yml
+#       parameters:
+#         serviceConnection: $(testServiceConnection)
+#         environmentName: 'test'
+#         identityFrameworkSecret: $(testIdentPrincipalSecret)
+#         proxyIdentityFrameworkSecret: $(testIdentProxyPrincipalSecret)
+#         graphAccessSecret: $(testGraphPrincipalSecret)
