--- a/yaml/jobs/deploy.yml
+++ b/yaml/jobs/deploy.yml
@@ -35,20 +35,18 @@ jobs:
       overrideParameters: '
       -applicationName "$(applicationName)"
       -environmentName "${{parameters.environmentName}}"
-      -publisherEmail "test@test.com"
-      -publisherName "deploymentTest"
-      -servicePlanSkuName "B1"
-      -servicePlanSkuTier "Basic"
-      -servicePlanSkuCount "1"
+      -servicePlanSkuName "$(functionServicePlanSkuName)"
+      -servicePlanSkuTier "$(functionServicePlanSkuTier)"
+      -servicePlanSkuCount "$(functionServicePlanSkuCount)"
       -secondaryStorageLocation "${{parameters.deploymentSecondaryLocation}}"
       -alertWebHookUrl "http://www.test.com"
       -B2CTenant "B2Cdemotenant"
-      -B2CSignUpPolicy "B2C_1A_signup_invitation"
-      -B2CSignupConfirmPolicy "B2C_1A_signup_confirmation"
-      -B2CPasswordResetConfirmPolicy "B2C_1A_passwordResetConformation"
+      -B2CSignUpPolicy "$(b2cSignUpPolicy)"
+      -B2CSignupConfirmPolicy "$(b2cSignupConfirmPolicy)"
+      -B2CPasswordResetConfirmPolicy "$(b2cPasswordResetConfirmPoicy)"
       -B2CClientId "$(b2cClientId)"
       -B2CRedirectUri "https://jwt.ms"
-      -B2CAuthorizationUrl "https://{0}.b2clogin.com/{0}.onmicrosoft.com/{1}/oauth2/v2.0/authorize?client_id={2}&nonce={4}&redirect_uri={3}&scope=openid&response_type=id_token"
+      -B2CAuthorizationUrl "$(b2cAuthorizationUrl)"
       -ClientSigningKey "$(clientSigningKey)"
       -SMTPServer "$(smtpServer)"
       -SMTPUsername "$(smtpUsername)"
@@ -63,9 +61,9 @@ jobs:
       -NCSDSSApiKey "$(ncsDssApiKey)"
       -NCSDSSSearchApiUrl "$(ncsDssSearchApiUrl)"
       -NCSDSSSearchApiVersion "$(ncsDssSearchApiVersion)"
-      -NCSDSSCreateCustomerApiUrl "https://at.api.nationalcareersservice.org.uk/customers/api/Customers/"
-      -NCSDSSCreateContactApiUrl "https://at.api.nationalcareersservice.org.uk/contactdetails/api/customers/{0}/ContactDetails/"
-      -NCSDSSCreateIdentityApiUrl "https://at.api.nationalcareersservice.org.uk/digitalidentities/api/identity"
+      -NCSDSSCreateCustomerApiUrl "$(ncsDssCreateCustomerApiUrl)"
+      -NCSDSSCreateContactApiUrl "$(ncsDssCreateContactApiUrl)
+      -NCSDSSCreateIdentityApiUrl "$(ncsDssCreateIdentityApiUrl)"
       -TouchpointId "1000000000"'
       eapimRegister: ${{parameters.deployApim}}
       eapimServiceConnection: $(eapimServiceConnection)
