--- a/yaml/jobs/tenant-setup.yml
+++ b/yaml/jobs/tenant-setup.yml
@@ -30,7 +30,7 @@ jobs:
 
   steps:
     - task: Tokenization@2
-      displayName: Tokenise Policy
+      displayName: Tokenise Policy Files
       inputs:
         SourcePath: '$(Build.SourcesDirectory)\policy\'
         TargetFileNames: '*.xml'
@@ -41,5 +41,5 @@ jobs:
     - pwsh: |
         $policyScript = Invoke-WebRequest $env:POLICYDEPLOYSCRIPTURL
         $scriptBlock = [Scriptblock]::Create($policyScript.Content)
-        Invoke-Command -ScriptBlock $scriptBlock -ArgumentList ($args + @('$($env:UPLOADERPRINCIPALCLIENTID)', '$($env:UPLOADERPRINCIPALSECRET)', '$($env:TENANTID)', 'B2C_1A_TrustFrameworkBase_invitation', '$(Build.SourcesDirectory)\policy\TrustFrameworkBase.xml'))
+        Invoke-Command -ScriptBlock $scriptBlock -ArgumentList ($args + @($env:UPLOADERPRINCIPALCLIENTID), $env:UPLOADERPRINCIPALSECRET, $env:TENANTID, 'B2C_1A_TrustFrameworkBase_invitation', '$(Build.SourcesDirectory)\policy\TrustFrameworkBase.xml'))
       displayName: Policy Upload
